--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3",
         "ext-simplexml": "*",
-        "clue/graph": "~0.8"
+        "clue/graph": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
